<resources>
    <string name="app_name">My Application</string>
    <string name="good_morning_value">Good morning!</string>
    <string name="manday">月曜日</string>
    <string name="wednesday">水曜日</string>
    <string name="wednesday2">木曜日</string>
    <string name="friday">金曜日</string>
    <string name="menu1">豆腐の卵あんかけ、なすの味噌汁、簡単しらす丼</string>
    <string name="manday2">月曜日</string>
    <string name="tuesday">火曜日</string>
    <string name="Monday">月曜日</string>
    <string name="Tuesday">火曜日</string>
    <string name="Wednesday">水曜日</string>
    <string name="Thursday">木曜日</string>
    <string name="Friday">金曜日</string>
</resources>