<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/greetingtext"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">
    <Button
        android:id="@+id/monday"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="536dp"
        android:text="@string/Monday"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#FF3131"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/tuesday"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="408dp"
        android:text="@string/Tuesday"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#FF3131"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/wednesday"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="276dp"
        android:text="@string/Wednesday"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#FF3131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/thursday"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="416dp"
        android:text="@string/Thursday"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#FF3131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/friday"
        android:layout_width="106dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="556dp"
        android:text="@string/Friday"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#FF3131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />